# xbase

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  configure  configure.ac  configure.in  doxygen.cfg  libtool.m4.in  ltmain.sh  makefile.cyg  makefile.g95  makefile.vc  makerules.vc  makevc.bat  mkinstalldirs  xbase-config.in  xbase.spec.in
docs/: Makefile.am  Makefile.in  doxygen.cfg  doxygen.cfg.in  makefile.cyg  makefile.g95
examples/: .gitignore  Makefile  Makefile.am  Makefile.in  examples.ide  exfilter.cpp  indextst.cpp  makebcc.bat  makefile.cyg  makefile.g95  makefile.vc  report  report.awk  sample1-ntx.cpp  sample1.cpp  sample2-ntx.cpp  sample2.cpp  sample3.cpp  sample4-ntx.cpp  sample4.cpp  sample5-ntx.cpp  sample5.cpp  string.cpp  testdate.cpp  testdbinfo.cpp  testhtml.cpp
html/: Makefile.am  Makefile.in  Xb2cpp.html  index.html  xbase.html  xbase_a1.html  xbase_a2.html  xbase_apps.html  xbase_c1.html  xbase_c10.html  xbase_c11.html  xbase_c12.html  xbase_c13.html  xbase_c14.html  xbase_c15.html  xbase_c16.html  xbase_c17.html  xbase_c18.html  xbase_c19.html  xbase_c2.html  xbase_c3.html  xbase_c4.html  xbase_c5.html  xbase_c6.html  xbase_c7.html  xbase_c8.html  xbase_c9.html  xbase_locking.html
libtest/: .gitignore  Makefile.am  Makefile.in  README  exptest.cpp  indextst.cpp  libtest.ide  locktest.cpp  makefile.cyg  makefile.g95  makefile.vc  sizeof.cpp  testdate.cpp  testhtml.cpp  testhtml.html
libtest/dbasefiles/: README
tv/: Makefile.am  Makefile.in  tvbrowse.cpp  tvbrowse.h  tvxbase.cpp
xbase/: .gitignore  Makefile.am  Makefile.in  database.cpp  database.h  dbf.cpp  dbf.h  exp.cpp  exp.h  expfunc.cpp  expproc.cpp  fields.cpp  html.cpp  html.h  index.cpp  index.h  lock.cpp  makefile.bcc  makefile.cyg  makefile.g95  makefile.vc  memo.cpp  ndx.cpp  ndx.h  ntx.cpp  ntx.h  options.h  retcodes.h  stack.cpp  xbase.cpp  xbase.h  xbase.h.in  xbase.ide  xbcf_b32.h  xbconfig.h  xbconfig.h.in  xbconfigw32.h  xbexcept.cpp  xbexcept.h  xbfilter.cpp  (+7 more)
xdb/: Makefile.am  Makefile.in  database.cpp  database.h  dbf.cpp  dbf.h  exp.cpp  exp.h  expfunc.cpp  expproc.cpp  fields.cpp  html.cpp  html.h  index.cpp  index.h  lock.cpp  memo.cpp  ndx.cpp  ndx.h  ntx.cpp  ntx.h  options.h  retcodes.h  stack.cpp  xbase.cpp  xbase.h  xbase.h.in  xbcf_b32.h  xbexcept.cpp  xbfilter.cpp  xbfilter.h  xbstring.cpp  xbstring.h  xdate.cpp  xdate.h  xstack.h  xtypes.h
ybase/: MANUAL  Makefile.am  README  funct.cpp  funct.h  lang.cpp  lang.h  lexic.cpp  parser.h  parser.y  table.cpp  table.h  trecom.cpp  trecom.h  treexp.cpp  treexp.h  types.cpp  types.h  ybase.cpp
